k8s/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/limit-req-status-code: "429"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - midden.reedgaines.com
    secretName: iam-midden-tls-secret
  rules:
  - host: midden.reedgaines.com
    http:
      paths:
      - path: /iam(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: iam-service
            port:
              number: 3000
